--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flutter_swiper : ^1.1.4
   http : ^0.12.0+1
   flutter_webview_plugin: ^0.3.5
+  cached_network_image: ^0.7.0
+  flutter_staggered_grid_view: ^0.2.7
+  flutter_splash_screen: ^0.1.0
 
 dev_dependencies:
   flutter_test:
